# microservises

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: blank.yml  docker-publish.yaml  docker-publish.yaml.yml
src/routes/: __init__.py
