[project]
name = "microservises"
version = "1.4.8.8"
description = ""
authors = [
    {name = "Manulik",email = "125672053+Otocolobus-manules@users.noreply.github.com"}
]
packages = [{include = "src"}]
package-mode = false
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
